# ThermalLBMflow

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  README.md
.github/workflows/: basicTests.yml
apps/: BUILDING.md  CMakeLists.txt  DEPENDENCIES.md  LICENSE  README.md
apps/FluidSim_cpu/: CMakeLists.txt  README.md  build_cpu.sh  build_local.sh  run_sim_cpu.sbatch  run_sim_local.sh
apps/FluidSim_cpu/codegen/: FluidSim.py  ThetaUpdate.py
apps/FluidSim_cpu/src/: FluidSimInternal.hpp  FluidSimRuntime.cpp  FluidSimRuntime.hpp  FluidSimSetup.cpp
apps/FluidSim_gpu/: CMakeLists.txt  FluidSim_gpu.cpp  GPU_TUNING.md  README.md  build_gpu.sh  profile_loop_gpu.sh  run_sim_gpu.sbatch
apps/FluidSim_gpu/codegen/: FluidSim.py  ThetaUpdate.py
apps/FluidSim_gpu/scripts/: extract_ncu.sh  extract_nsys.sh  run_with_ncu.sh  run_with_nsys.sh
apps/FluidSim_gpu/src/: FluidSimInternal.hpp  FluidSimRuntime.cpp  FluidSimRuntime.hpp  FluidSimSetup.cpp  FluidSimSetup.hpp  GpuReductions.cu  GpuReductions.hpp
apps/pythonmodule/: pyproject.toml
apps/shared/: README.md
apps/shared/geometry/: LZModel_FullScale.PLY
apps/shared/helpers/: MeshHelpers.hpp  VtkTimeMetadataHelpers.hpp
apps/shared/params/: FluidSim.prm
apps/shared/scripts/: apply_core_patches.sh  install_codegen_venv.sh
doc/: GIT_LOGICAL_COMMITS.md
